--- a/app/.prettierrc
+++ b/app/.prettierrc
@@ -1,9 +1,17 @@
 {
 	"useTabs": true,
-	"singleQuote": true,
-	"trailingComma": "none",
-	"printWidth": 100,
+	"singleQuote": false,
+	"trailingComma": "es5",
+	"printWidth": 80,
+	"proseWrap": "never",
 	"plugins": ["prettier-plugin-svelte"],
-	"pluginSearchDirs": ["."],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"svelteIndentScriptAndStyle": false,
+	"overrides": [
+		{
+			"files": "*.svelte",
+			"options": {
+				"parser": "svelte"
+			}
+		}
+	]
 }
