--- a/studio/package.json
+++ b/studio/package.json
@@ -15,20 +15,21 @@
     "sanity"
   ],
   "dependencies": {
-    "@sanity/vision": "^3.33.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-is": "^18.2.0",
-    "sanity": "^3.33.0",
-    "styled-components": "^6.1.8"
+    "@sanity/asset-utils": "^1.3.0",
+    "@sanity/vision": "^3.43.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
+    "sanity": "^3.43.0",
+    "styled-components": "^6.1.11"
   },
   "devDependencies": {
     "@sanity/eslint-config-studio": "^3.0.1",
-    "@types/node": "^18.19.23",
-    "@types/react": "^18.2.73",
+    "@types/node": "^18.19.33",
+    "@types/react": "^18.3.3",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.5"
   },
   "prettier": {
     "semi": false,
