--- a/app/package.json
+++ b/app/package.json
@@ -16,6 +16,7 @@
 		"@sanity/svelte-loader": "^1.11.24",
 		"@sanity/visual-editing": "^1.8.21",
 		"@sveltejs/adapter-netlify": "^4.2.0",
+		"@vercel/analytics": "^1.3.0",
 		"groq": "^3.43.0",
 		"netlify-cli": "^17.23.6"
 	},
