--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 		"@sanity/visual-editing": "^1.8.21",
 		"@sveltejs/adapter-netlify": "^4.2.0",
 		"@vercel/analytics": "^1.3.0",
+		"@vercel/speed-insights": "^1.0.10",
 		"groq": "^3.43.0",
 		"netlify-cli": "^17.23.6"
 	},
