--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
+		"@giscus/svelte": "^3.0.0",
 		"@sanity/asset-utils": "^1.3.0",
 		"@sanity/client": "^6.18.2",
 		"@sanity/image-url": "^1.0.2",
