--- a/app/package.json
+++ b/app/package.json
@@ -12,15 +12,17 @@
 	"dependencies": {
 		"@giscus/svelte": "^3.0.0",
 		"@sanity/asset-utils": "^1.3.0",
-		"@sanity/client": "^6.18.2",
+		"@sanity/client": "^6.18.3",
 		"@sanity/image-url": "^1.0.2",
 		"@sanity/svelte-loader": "^1.11.24",
 		"@sanity/visual-editing": "^1.8.21",
 		"@sveltejs/adapter-netlify": "^4.2.0",
-		"@vercel/analytics": "^1.3.0",
-		"@vercel/speed-insights": "^1.0.10",
+		"@vercel/analytics": "^1.3.1",
+		"@vercel/speed-insights": "^1.0.11",
 		"groq": "^3.43.0",
-		"netlify-cli": "^17.23.6"
+		"netlify-cli": "^17.23.8",
+		"svelte-body": "^1.4.0",
+		"svelte-outclick": "^3.7.1"
 	},
 	"devDependencies": {
 		"@portabletext/svelte": "^2.1.11",
@@ -36,6 +38,8 @@
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.39.0",
 		"postcss": "^8.4.38",
+		"postcss-easings": "^4.0.0",
+		"postcss-preset-env": "^9.5.14",
 		"prettier": "^3.2.5",
 		"prettier-plugin-svelte": "^3.2.3",
 		"svelte": "^4.2.17",
