--- a/app/package.json
+++ b/app/package.json
@@ -20,6 +20,7 @@
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.11",
 		"groq": "^3.43.0",
+		"groq-js": "^1.9.0",
 		"netlify-cli": "^17.23.8",
 		"svelte-body": "^1.4.0",
 		"svelte-outclick": "^3.7.1"
