--- a/app/package.json
+++ b/app/package.json
@@ -17,6 +17,7 @@
 		"@sanity/svelte-loader": "^1.11.24",
 		"@sanity/visual-editing": "^1.8.21",
 		"@sveltejs/adapter-netlify": "^4.2.0",
+		"@sveltejs/adapter-vercel": "^5.3.0",
 		"@vercel/analytics": "^1.3.1",
 		"@vercel/speed-insights": "^1.0.11",
 		"groq": "^3.43.0",
