--- a/app/vercel.json
+++ b/app/vercel.json
@@ -3,6 +3,10 @@
 		{
 			"source": "/work/:path",
 			"destination": "/:path"
+		},
+		{
+			"source": "/assets/:path",
+			"destination": "/:path"
 		}
 	],
 	"headers": [
