--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
 		"netlify-cli": "^17.23.8",
 		"svelte-body": "^1.4.0",
 		"svelte-outclick": "^3.7.1",
+		"svelte-preprocess": "^6.0.3",
 		"sveltekit-search-params": "^2.1.2"
 	},
 	"devDependencies": {
