--- a/app/package.json
+++ b/app/package.json
@@ -25,6 +25,7 @@
 		"svelte-body": "^1.4.0",
 		"svelte-outclick": "^3.7.1",
 		"svelte-preprocess": "^6.0.3",
+		"svelte-query-params": "^0.2.4",
 		"sveltekit-search-params": "^2.1.2",
 		"vercel": "^37.12.1"
 	},
