fixed node engine version in package.json

--- a/app/package.json
+++ b/app/package.json
@@ -52,8 +52,5 @@
 		"typescript": "^5.4.5",
 		"vite": "^5.2.11"
 	},
-	"type": "module",
-	"engines": {
-		"node": ">= 14.18"
-	}
+	"type": "module"
 }
