--- a/app/package.json
+++ b/app/package.json
@@ -10,47 +10,44 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"dependencies": {
-		"@sanity/asset-utils": "^1.3.0",
-		"@sanity/client": "^6.18.3",
-		"@sanity/image-url": "^1.0.2",
-		"@sanity/svelte-loader": "^1.11.24",
-		"@sanity/visual-editing": "^1.8.21",
-		"@sveltejs/adapter-netlify": "^4.2.0",
-		"@sveltejs/adapter-vercel": "^5.3.0",
-		"@vercel/analytics": "^1.3.1",
-		"@vercel/speed-insights": "^1.0.11",
-		"groq": "^3.43.0",
-		"groq-js": "^1.9.0",
-		"netlify-cli": "^17.23.8",
-		"svelte-body": "^1.4.0",
-		"svelte-outclick": "^3.7.1",
+		"@sanity/asset-utils": "^2.2.1",
+		"@sanity/client": "^6.27.2",
+		"@sanity/image-url": "^1.1.0",
+		"@sanity/svelte-loader": "^1.13.12",
+		"@sanity/visual-editing": "^2.12.11",
+		"@sveltejs/adapter-vercel": "^5.6.1",
+		"@vercel/analytics": "^1.4.1",
+		"@vercel/speed-insights": "^1.1.0",
+		"groq": "^3.72.1",
+		"groq-js": "^1.15.0",
+		"kit-query-params": "^0.0.26",
+		"svelte-body": "^2.0.0",
+		"svelte-outclick": "^4.1.1",
 		"svelte-preprocess": "^6.0.3",
-		"svelte-query-params": "^0.2.4",
-		"sveltekit-search-params": "^2.1.2",
-		"vercel": "^37.12.1"
+		"vercel": "^40.1.0"
 	},
 	"devDependencies": {
 		"@portabletext/svelte": "^2.1.11",
 		"@portabletext/types": "^2.0.13",
-		"@sanity/types": "^3.43.0",
-		"@sveltejs/adapter-auto": "^3.2.1",
-		"@sveltejs/kit": "^2.5.10",
-		"@sveltejs/vite-plugin-svelte": "^4.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.21.0",
-		"@typescript-eslint/parser": "^6.21.0",
-		"autoprefixer": "^10.4.19",
-		"eslint": "^8.57.0",
-		"eslint-config-prettier": "^9.1.0",
-		"eslint-plugin-svelte": "^2.39.0",
-		"postcss": "^8.4.38",
+		"@sanity/types": "^3.72.1",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/kit": "^2.17.1",
+		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@typescript-eslint/eslint-plugin": "^8.23.0",
+		"@typescript-eslint/parser": "^8.23.0",
+		"autoprefixer": "^10.4.20",
+		"eslint": "^9.19.0",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-svelte": "^2.46.1",
+		"postcss": "^8.5.1",
 		"postcss-easings": "^4.0.0",
-		"postcss-preset-env": "^9.5.14",
-		"prettier": "^3.2.5",
-		"prettier-plugin-svelte": "^3.2.3",
-		"svelte": "^5.0.5",
-		"tslib": "^2.6.2",
-		"typescript": "^5.4.5",
-		"vite": "^5.2.11"
+		"postcss-preset-env": "^10.1.3",
+		"prettier": "^3.4.2",
+		"prettier-plugin-svelte": "^3.3.3",
+		"svelte": "^5.19.7",
+		"tslib": "^2.8.1",
+		"typescript": "^5.7.3",
+		"vite": "^6.0.11"
 	},
 	"type": "module"
 }
