--- a/studio/package.json
+++ b/studio/package.json
@@ -17,18 +17,19 @@
   "dependencies": {
     "@sanity/asset-utils": "^2.2.1",
     "@sanity/vision": "^3.78.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-is": "^19.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-is": "^18.3.1",
     "sanity": "^3.78.1",
     "sanity-plugin-tags": "^2.1.1",
     "sanity-plugin-youtube-input": "^0.2.0",
     "styled-components": "^6.1.15"
   },
   "devDependencies": {
+    "@sanity/cli": "^3.78.1",
     "@sanity/eslint-config-studio": "^5.0.2",
     "@types/node": "^22.13.10",
-    "@types/react": "^19.0.10",
+    "@types/react": "^18.3.3",
     "eslint": "^9.22.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
